# streaming-overview-tui

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-01-27-search-engine-design.md  2026-01-27-search-engine-implementation.md  2026-01-28-tui-layer-design.md  2026-01-28-tui-layer-implementation.md  2026-01-29-pixel-art-poster-design.md  2026-01-29-pixel-art-poster-implementation.md
streaming_overview_tui/: run.py
streaming_overview_tui/config_layer/: __init__.py  config.py
streaming_overview_tui/data_layer/: __init__.py  database.py  models.py  repository.py  tmdb_client.py
streaming_overview_tui/search_engine/: __init__.py  models.py  search.py
streaming_overview_tui/tui_layer/: __init__.py  main_screen.py  setup_screen.py  stream_app.py
streaming_overview_tui/tui_layer/widgets/: __init__.py  detail_panel.py  pixel_art.py  poster_widget.py  results_list.py
tests/unit/data_layer/: test_models.py  test_repository.py  test_tmdb_client.py
tests/unit/search_engine/: test_models.py  test_search.py
tests/unit/tui_layer/: poster_widget_test.py  test_detail_panel.py  test_main_screen.py  test_pixel_art.py  test_results_list.py
